[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/objects/background_tilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/objects/music.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/objects/foreground_tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/graphic/gui/fontStyle.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/graphic/gui/guiElement_1.png" type="Texture" id=5]
[ext_resource path="res://assets/graphic/gui/guiElement_0.png" type="Texture" id=6]
[ext_resource path="res://assets/graphic/gui/guiElement_2.png" type="Texture" id=7]
[ext_resource path="res://assets/graphic/gui/guiElement_3.png" type="Texture" id=8]
[ext_resource path="res://assets/graphic/gui/fontstyle_button.tres" type="DynamicFont" id=9]
[ext_resource path="res://button_exit.gd" type="Script" id=10]
[ext_resource path="res://playMenuControl.gd" type="Script" id=11]
[ext_resource path="res://assets/objects/EnemyPath.tscn" type="PackedScene" id=12]
[ext_resource path="res://mainmenuControl.gd" type="Script" id=13]
[ext_resource path="res://assets/graphic/gui/guiElement_4.png" type="Texture" id=14]
[ext_resource path="res://assets/graphic/gui/guiElement_9.png" type="Texture" id=15]
[ext_resource path="res://assets/graphic/gui/guiElement_10.png" type="Texture" id=16]
[ext_resource path="res://assets/graphic/gui/guiElement_10_1.png" type="Texture" id=17]
[ext_resource path="res://assets/graphic/gui/guiElement_9_1.png" type="Texture" id=18]
[ext_resource path="res://assets/objects/ambient.tscn" type="PackedScene" id=19]
[ext_resource path="res://optionsControl.gd" type="Script" id=20]
[ext_resource path="res://assets/graphic/gui/guiElement_14.png" type="Texture" id=21]
[ext_resource path="res://assets/graphic/gui/guiElement_13.png" type="Texture" id=22]
[ext_resource path="res://assets/objects/AirplaneSpawnerObject.tscn" type="PackedScene" id=23]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1000, 800 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 16, 26 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 16, 26 )

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 2
fps = 3.0
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 18 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frames = 2
fps = 3.0
frame_0/texture = ExtResource( 16 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0

[node name="Level" type="Node2D"]

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="foreground" parent="." instance=ExtResource( 3 )]

[node name="music" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="mainmenuControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/mainmenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -944.0
margin_top = 120.0
margin_right = 946.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 4 )
text = "TOWER DEFENSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="CanvasLayer/mainmenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 448.0
margin_right = 160.0
margin_bottom = 538.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/mainmenuControl/play"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="TextureButton" parent="CanvasLayer/mainmenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 576.0
margin_right = 160.0
margin_bottom = 664.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/mainmenuControl/settings"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="TextureButton" parent="CanvasLayer/mainmenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 704.0
margin_right = 160.0
margin_bottom = 792.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/mainmenuControl/credits"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="CanvasLayer/mainmenuControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 832.0
margin_right = 160.0
margin_bottom = 920.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/mainmenuControl/exit"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1080.0
margin_bottom = 1080.0
script = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="save" type="TextureButton" parent="CanvasLayer/optionsControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 448.0
margin_top = 984.0
margin_right = 768.0
margin_bottom = 1072.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/optionsControl/save"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "SAVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backToMainmenu" type="TextureButton" parent="CanvasLayer/optionsControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -768.0
margin_top = 984.0
margin_right = -448.0
margin_bottom = 1072.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/optionsControl/backToMainmenu"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/optionsControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -460.0
margin_right = 768.0
margin_bottom = 442.0
rect_scale = Vector2( 1, 0.984695 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash_label" type="Label" parent="CanvasLayer/optionsControl"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -221.0
margin_top = -95.0
margin_right = 221.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 9 )
text = "Settings saved!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/optionsControl"]
margin_left = 256.0
margin_top = 408.0
margin_right = 890.0
margin_bottom = 453.0
custom_fonts/font = ExtResource( 9 )
text = "Play sound on 2x Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off_2xsound" type="TextureButton" parent="CanvasLayer/optionsControl/Label"]
margin_left = 1024.0
margin_right = 1216.0
margin_bottom = 49.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="CanvasLayer/optionsControl/Label/Off_2xsound"]
margin_right = 192.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 9 )
text = "ON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/optionsControl"]
margin_left = 256.0
margin_top = 536.0
margin_right = 890.0
margin_bottom = 581.0
custom_fonts/font = ExtResource( 9 )
text = "SFX VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_slider" type="HSlider" parent="CanvasLayer/optionsControl/Label2"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 49.0
rect_scale = Vector2( 1, 0.992313 )
custom_icons/grabber_highlight = ExtResource( 21 )
custom_icons/grabber = ExtResource( 21 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -24.0
max_value = 0.0
step = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/optionsControl"]
margin_left = 256.0
margin_top = 664.0
margin_right = 890.0
margin_bottom = 709.0
custom_fonts/font = ExtResource( 9 )
text = "MUSIC  VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider2" type="HSlider" parent="CanvasLayer/optionsControl/Label3"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 49.0
rect_scale = Vector2( 1, 0.992313 )
custom_icons/grabber_highlight = ExtResource( 21 )
custom_icons/grabber = ExtResource( 21 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -24.0
max_value = 0.0
step = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer/optionsControl"]
margin_left = 256.0
margin_top = 800.0
margin_right = 890.0
margin_bottom = 845.0
custom_fonts/font = ExtResource( 9 )
text = "MASTER VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master_slider3" type="HSlider" parent="CanvasLayer/optionsControl/Label5"]
margin_left = 960.0
margin_top = -8.0
margin_right = 1280.0
margin_bottom = 41.0
rect_scale = Vector2( 1, 0.992313 )
custom_icons/grabber_highlight = ExtResource( 21 )
custom_icons/grabber = ExtResource( 21 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -24.0
max_value = 0.0
step = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="CanvasLayer/optionsControl"]
margin_left = 256.0
margin_top = 280.0
margin_right = 890.0
margin_bottom = 325.0
custom_fonts/font = ExtResource( 9 )
text = "FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="TextureButton" parent="CanvasLayer/optionsControl/Label6"]
margin_left = 1025.0
margin_right = 1217.0
margin_bottom = 49.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="CanvasLayer/optionsControl/Label6/Off"]
margin_right = 192.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 9 )
text = "ON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideTitle" type="Label" parent="CanvasLayer/optionsControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 136.0
margin_right = 314.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 9 )
text = "OPTIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1080.0
margin_bottom = 1080.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="backToMainmenu" type="TextureButton" parent="CanvasLayer/creditsControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -768.0
margin_top = 984.0
margin_right = -448.0
margin_bottom = 1072.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/creditsControl/backToMainmenu"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/creditsControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -460.0
margin_right = 768.0
margin_bottom = 442.0
rect_scale = Vector2( 1, 0.984695 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/creditsControl"]
margin_left = 192.0
margin_top = 200.0
margin_right = 1728.0
margin_bottom = 968.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]PROGRAMMER:[/center]
[center]RAFAEL FIEDLER[/center]

[center]SPRITES:[/center]
[center]KENNEY (www.kenney.nl)[/center]

[center]MUSIC:[/center]
[center]DST (opengameart.org)[/center]

[center]SOUNDS:[/center]
[center]LUKE.RUSTLTD  (opengameart.org)[/center]


[center]License:[/center]
[center]
GODOT:

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
		
FreeType:

Portions of this software are copyright © 2021 The FreeType Project (www.freetype.org).  All rights reserved.
	
ENet:

Copyright (c) 2002-2020 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

MBedTLS:

Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); 
you may not use this file except in compliance with the License.

You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
[/center]"
text = "PROGRAMMER:
RAFAEL FIEDLER

SPRITES:
KENNEY (www.kenney.nl)

MUSIC:
DST (opengameart.org)

SOUNDS:
LUKE.RUSTLTD  (opengameart.org)


License:

GODOT:

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
		
FreeType:

Portions of this software are copyright © 2021 The FreeType Project (www.freetype.org).  All rights reserved.
	
ENet:

Copyright (c) 2002-2020 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

MBedTLS:

Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); 
you may not use this file except in compliance with the License.

You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/creditsControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 104.0
margin_right = 160.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 9 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playControl" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1080.0
margin_bottom = 1080.0
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="backToMainmenu" type="TextureButton" parent="CanvasLayer/playControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -768.0
margin_top = 984.0
margin_right = -448.0
margin_bottom = 1072.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/playControl/backToMainmenu"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelPreviewController" type="Control" parent="CanvasLayer/playControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="startgame" type="TextureButton" parent="CanvasLayer/playControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 448.0
margin_top = 984.0
margin_right = 768.0
margin_bottom = 1072.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/playControl/startgame"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuegame" type="TextureButton" parent="CanvasLayer/playControl"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 112.0
margin_top = 984.0
margin_right = 432.0
margin_bottom = 1072.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/playControl/continuegame"]
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 9 )
text = "CONTINUE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scrollToLeft" type="TextureButton" parent="CanvasLayer/playControl"]
process_priority = 5
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = -20.0
margin_right = 232.0
margin_bottom = 56.0
rect_rotation = -0.066475
texture_normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scrollToRight" type="TextureButton" parent="CanvasLayer/playControl"]
process_priority = 5
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1688.0
margin_top = -20.0
margin_right = 1784.0
margin_bottom = 56.0
texture_normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyPath" parent="." instance=ExtResource( 12 )]
isInMainMenu = true

[node name="ambient" parent="." instance=ExtResource( 19 )]
autoplay = true

[node name="AirplaneSpawnerObject" parent="." instance=ExtResource( 23 )]

[connection signal="pressed" from="CanvasLayer/mainmenuControl/play" to="CanvasLayer" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/mainmenuControl/settings" to="CanvasLayer" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/mainmenuControl/credits" to="CanvasLayer" method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/mainmenuControl/exit" to="CanvasLayer/mainmenuControl/exit" method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/optionsControl/save" to="CanvasLayer/optionsControl" method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/optionsControl/backToMainmenu" to="CanvasLayer" method="_on_backToMainmenu_pressed"]
[connection signal="toggled" from="CanvasLayer/optionsControl/Label/Off_2xsound" to="CanvasLayer/optionsControl" method="_on_Off_2xsound_toggled"]
[connection signal="value_changed" from="CanvasLayer/optionsControl/Label2/sfx_slider" to="CanvasLayer/optionsControl" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/optionsControl/Label3/music_slider2" to="CanvasLayer/optionsControl" method="_on_music_slider2_value_changed"]
[connection signal="value_changed" from="CanvasLayer/optionsControl/Label5/master_slider3" to="CanvasLayer/optionsControl" method="_on_master_slider3_value_changed"]
[connection signal="toggled" from="CanvasLayer/optionsControl/Label6/Off" to="CanvasLayer/optionsControl" method="_on_Off_toggled"]
[connection signal="pressed" from="CanvasLayer/creditsControl/backToMainmenu" to="CanvasLayer" method="_on_backToMainmenu_pressed"]
[connection signal="pressed" from="CanvasLayer/playControl/backToMainmenu" to="CanvasLayer" method="_on_backToMainmenu_pressed"]
[connection signal="pressed" from="CanvasLayer/playControl/startgame" to="CanvasLayer/playControl" method="_on_startgame_pressed"]
[connection signal="pressed" from="CanvasLayer/playControl/continuegame" to="CanvasLayer/playControl" method="_on_continuegame_pressed"]
[connection signal="pressed" from="CanvasLayer/playControl/scrollToLeft" to="CanvasLayer/playControl" method="_on_scrollToLeft_pressed"]
[connection signal="pressed" from="CanvasLayer/playControl/scrollToRight" to="CanvasLayer/playControl" method="_on_scrollToRight_pressed"]
